--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -15,7 +15,7 @@
                 "background": {
                     "activeOnStart": true,
                     "beginsPattern": ".*",
-                    "endsPattern": "ready in.*"
+                    "endsPattern": ".*ready in\\s+[0-9]+\\s+ms"
                 }
             }
         }
