Fixed the wrap text on a page.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -14,8 +14,8 @@
                 },
                 "background": {
                     "activeOnStart": true,
-                    "beginsPattern": ".*",
-                    "endsPattern": ".*ready in\\s+[0-9]+\\s+ms"
+                    "beginsPattern": ".*VITE.*",
+                    "endsPattern": ".*Local:.*"
                 }
             }
         }
